--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,16 +21,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 file.reference.commons-io-1.4.jar=C:\\Users\\pakutsing\\Desktop\\Github\\OU\\lib\\commons-io-1.4.jar
 file.reference.jdbc-oracle.jar=C:\\Users\\pakutsing\\Documents\\NetBeansProjects\\WebApplication1\\web\\WEB-INF\\lib\\jdbc-oracle.jar
-file.reference.json-simple-1.1.1.jar=C:\\Users\\pakutsing\\Documents\\NetBeansProjects\\WebApplication1\\web\\WEB-INF\\lib\\json-simple-1.1.1.jar
 file.reference.mysql-connector-java-5.0.2.jar=C:\\Users\\pakutsing\\Documents\\NetBeansProjects\\WebApplication1\\web\\WEB-INF\\lib\\mysql-connector-java-5.0.2.jar
+file.reference.org.json.jar=C:\\Users\\pakutsing\\Desktop\\Github\\PgInformationSystem\\lib\\org.json.jar
 j2ee.platform=1.5
 j2ee.server.type=Tomcat60
 jar.compress=false
 javac.classpath=\
     ${file.reference.jdbc-oracle.jar}:\
     ${file.reference.mysql-connector-java-5.0.2.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.commons-io-1.4.jar}
+    ${file.reference.commons-io-1.4.jar}:\
+    ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
